tdf#123971 don't clobber entire RowHeight range on updates

Use start index from current loop variable, not full range; otherwise
we're always clobbering values from (possibly higher) upper rows.

Change-Id: I3add7c2358710f4ae3927e7b0a1c1ff544965a03
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/88785
Tested-by: Jenkins
Reviewed-by: Thorsten Behrens <Thorsten.Behrens@CIB.de>